# isocode

./: .dockerignore  .gitignore  Dockerfile  Isocode.cabal  LICENSE  Makefile  README.md  build-in-docker.sh  isocode.cabal
.github/workflows/: dockerimage.yml  haskell.yml  macos.yml
examples/: everything.pl  should_match.pl
src/: Matcher.hs  Parse.hs  ParseStrings.hs  Transform.hs  Walk.hs
test/: MatchingTests.hs  Spec.hs
