name:                Isocode
version:             0.1.0.0

synopsis: Search Perl 5 code by pattern
description: Smart Perl 5 code search by ignoring minor differences.

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE
author:              Alexander Neganov
maintainer:          ikkeps@gmail.com
category:            Development
build-type:          Simple
extra-source-files:  README.md

cabal-version:       >=1.10

executable isocode

  main-is:             Walk.hs
  build-depends:       base == 4.*
                     , directory >= 1.3.0.0
                     , filepath >= 1.4.1.1
                     , attoparsec  >= 0.13.2.3
                     , bytestring >= 0.10.8.1
                     , bytestring >= 0.10.8.1
                     , pretty-simple >= 3.2.2.0
                     , optparse-applicative >= 0.15.1.0
                     , async-pool >= 0.9.1
                     , containers >= 0.5.7.1
  ghc-options:
    -O2
    -W
    -threaded
    "-with-rtsopts=-N"
    -static
    -optl-static
    -optl-pthread
    -optc-fPIC
    -fPIC

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test-all
  hs-source-dirs:      src, test
  default-language:    Haskell2010
  type:       exitcode-stdio-1.0
  main-is:    Spec.hs
  ghc-options:
    -O2
    -W
    -threaded
    "-with-rtsopts=-N"
    -static
    -optl-static
    -optl-pthread
    -optc-fPIC
    -fPIC
  build-depends:       base == 4.*
                     , directory >= 1.3.0.0
                     , filepath >= 1.4.1.1
                     , attoparsec  >= 0.13.2.3
                     , bytestring >= 0.10.8.1
                     , bytestring >= 0.10.8.1
                     , pretty-simple >= 3.2.2.0
                     , optparse-applicative >= 0.15.1.0
                     , async-pool >= 0.9.1
                     , containers >= 0.5.7.1

                     , hspec >= 2.7.1
