cabal-version:       2.2
name:                isocode
version:             0.1.0.0

synopsis: Search Perl 5 code by pattern
description: Smart Perl 5 code search by ignoring minor differences.

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE
author:              Alexander Neganov
maintainer:          ikkeps@gmail.com
category:            Development
build-type:          Simple
extra-source-files:  README.md


common shared-properties
  default-language:    Haskell2010
  build-depends:       base == 4.*
                     , directory >= 1.3.0.0
                     , filepath >= 1.4.1.1
                     , attoparsec  >= 0.13.2.3
                     , bytestring >= 0.10.8.1
                     , bytestring >= 0.10.8.1
                     , pretty-simple >= 3.2.2.0
                     , optparse-applicative >= 0.15.1.0
                     , containers >= 0.5.7.1
                     , ansi-terminal >= 0.10.3
  ghc-options:
    -O2
    -W
    -threaded
    "-with-rtsopts=-N"
    -static
    -optl-static
    -optl-pthread
    -optc-fPIC
    -fPIC

executable isocode
  import: shared-properties
  hs-source-dirs: src
  main-is:        Walk.hs
  other-modules:  Matcher, Parse, Transform

test-suite test-all
  import: shared-properties
  hs-source-dirs:      src, test
  type:       exitcode-stdio-1.0
  main-is:    Spec.hs
  build-depends: hspec >= 2.7.1
  other-modules: Matcher MatchingTests Parse
